syntax = "proto3";

option csharp_namespace = "GrpcAgent";

package GrpcAgent;

service Notifier {
  rpc Notify (NotifyRequest) returns (NotifyReply);
}

message NotifyRequest {
  string content = 1;
}

message NotifyReply {
  bool IsSuccess = 1;
}
